layout shift fixed

--- a/components/movieDetail/movieDetail.module.css
+++ b/components/movieDetail/movieDetail.module.css
@@ -141,6 +141,7 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  animation: anim 1s ease-in;
 }
 
 .voteFlexContainer
